[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/debug_ui.gd" id="1_debug"]

[node name="DebugUI" type="CanvasLayer"]
script = ExtResource("1_debug")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 160.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 150.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="ToggleButton" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Show Atlas"

[node name="InfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mode: Interleaved
Cameras: 40
Grid: 8x5
Focal: 10.00
Atlas: 4320x4800"
vertical_alignment = 1
